# Golden-Mouse

./: .gitignore  LICENSE  README.md  apikey.yaml.example  config.py  email_test.py  pyproject.toml  requirements.txt  server.py
GoldenMouse/: index.html  subscribe.html  today.html
accident_email_senter/: update_notification.py
email_subscriber/: __init__.py  config.py  subscriberDB.py  subscriber_manager.py
official_document_crawler/: __init__.py  main_crawler.py
official_document_crawler/crawler/: __init__.py  config.py  database.py  fetcher.py  parser.py  stats.py  utils.py
secureTest/: test_cases.yaml  test_dlp.py  test_firewall.py
secure_uilts/: README.md  content_summarizer.go  db_firewall.go  deepseek_client.go  go.mod  go.sum  secure_loader.go  setup_linux.sh  setup_windows.ps1  smart_dlp.go  start_server.ps1  start_server.sh
secure_uilts/cmd/api_server/: main.go
secure_uilts/cmd/check_connectivity/: main.go
secure_uilts/cmd/secure_setup/: main.go
secure_uilts/cmd/verify_components/: main.go
static/: index.html  subscribe.html  today.html
tools/: clean_invalid_subscribers.py
