[project]
name = "goldenmouse"
version = "1.1.0"
description = "深圳技术大学公文通爬虫和订阅系统"
authors = [
    {name = "GoldenMouse Team"}
]
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
keywords = ["crawler", "email", "notification", "flask"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: Flask",
]

dependencies = [
    "flask",
    "schedule", 
    "requests>",
    "sqlalchemy",
    "beautifulsoup4",
    "pyaml",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
]

[project.scripts]
server = "server:main"

[project.urls]
Homepage = "https://github.com/yourusername/goldenmouse"
Repository = "https://github.com/yourusername/goldenmouse"
Issues = "https://github.com/yourusername/goldenmouse/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["official_document_crawler", "email_subscriber"]
artifacts = [
    "server.py",
    "config.py",
    "static/",
    "database/",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=22.0.0", 
    "flake8>=4.0.0",
]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
